# snake_rl_jax

./: .gitignore  LICENSE  README.md  config.yaml  grid_search.py  play_agent.py  pyproject.toml  train.py  viz.py
agents/5x5/: AC2_nn_clip_lr1e-4_55330977.pkl
scripts/: auto_viz.sh  mearure_game_perf.py
src/: actor_critic.py  config_utils.py  evaluate.py  func_approx.py  groups.py  models.py  models.py_back  training.py  types.py  utils.py
src/game/: game.py  game_with_history.py
tests/: test_groups.py
