[project]
name = "snake_rl_jax"
version = "0.1.0"
description = "RL Actor critic implementation that learns to play Snake"
authors = [{name = "Danilo Biella", email = "d.biella@gmail.com"}]
requires-python = ">= 3.11"
dependencies = ["tensorflow", "tensorboard-plugin-profile>=2.19.0,<2.20"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
snake_refactor = { path = ".", editable = true }

[tool.pixi.dependencies]
jaxlib = { version = ">=0.4.23,<0.5.0", build = "*cuda12*" }
cuda-nvcc = ">=12.0,<13"
dm-haiku = ">=0.0.12,<0.1"
optax = ">=0.2.2,<0.3"
numpy = "<2.0"
jax = ">=0.4.28,<0.4.29"
matplotlib = ">=3.9.1,<3.10"
ipython = ">=8.26.0,<8.27"
pynvim = ">=0.5.0,<0.6"
mypy = ">=1.10.1,<1.11"
python-lsp-server = ">=1.11.0,<1.12"
seaborn = ">=0.13.2,<0.14"
pytest = ">=8.3.2,<8.4"
polars = ">=1.5.0,<1.6"
ruff = ">=0.8.4,<0.9"
debugpy = ">=1.8.11,<1.9"
pandas-stubs = ">=2.2.3.241126,<2.2.4"

[tool.pixi.tasks]

[tool.pixi.system-requirements]
cuda = "12"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]
exclude = []
namespaces = false
